# tree_detect

./: CMakeLists.txt  package.xml  setup.cfg
config/: real_detection_params.yaml  sim_detection_params.yaml  sim_slam_params.yaml  visualization_params.yaml  visualization_params_slam.yaml
launch/: sim.xml
scripts/BACKEND/: EKF.py  slam_node.py
scripts/FRONTEND/: common.py  detect_node.py  detect_node_openvino.py  detect_node_tensorRT.py  detect_node_tensorRT_real.py  detector_openvino.py  detector_tensorRT.py  measurement3d_2d.py  pure_pursuit.py
scripts/UTILS/: visualize.py  visualize_slam.py
